# logic-plugins

./: .gitignore  README.md
.github/workflows/: release_logic_aiv.yml
LogicAIV/: 10_PROMPT_HISTORY.md  8_PROMPT_HISTORY.md  build_output_7.txt  settings_3.txt  synchronize_project.rb  unset_bridging_header.rb  update_bridging_header.rb  update_build_settings.rb
LogicAIV/AIV.xcodeproj/: project.pbxproj
LogicAIV/AIV.xcodeproj/project.xcworkspace/xcuserdata/iairu.xcuserdatad/: UserInterfaceState.xcuserstate
LogicAIV/Shared/: AIVDemoViewController.swift  AudioUnitManager.swift
LogicAIV/Shared/AudioUnit/: AIVDemoParameters.swift
LogicAIV/Shared/AudioUnit/Support/: AIVDSPClasses.hpp  AIVDSPKernel.hpp  AIVDSPKernelAdapter.h  AIVDSPKernelAdapter.mm
LogicAIV/Shared/Support/User Interface/: AIVControls.swift  AIVMainView.swift  AudioUnitViewModel.swift  FilterView.swift  RackModules.swift  TypeAliases.swift  ViewExtensions.swift
LogicAIV/Shared/Support/User Interface/Modules/: DynamicsModuleView.swift
LogicAIV/iOS/AIV/: Info.plist
LogicAIV/iOS/AIVExtension/: Info.plist
LogicAIV/macOS/AIV/: Info.plist  MainViewController.swift
LogicAIV/macOS/AIVExtension/: Info.plist
LogicAIV/macOS/AIVFramework/: AIVFramework-Bridging-Header.h  AIVFramework.h  Info.plist
Zone/: CMakeLists.txt  README.md  vst3sdk
Zone/src/: Controller.cpp  Controller.h  Entry.cpp  Processor.cpp  Processor.h
